--- a/blueberries.html
+++ b/blueberries.html
@@ -13,8 +13,8 @@
   <h1>Berries</h1>
   <nav>
     <ul class="nav">
-      <li><a class="current" href="index.html">Home</a></li>
-      <li><a href="blueberries.html">Blueberries</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a class="current" href="blueberries.html">Blueberries</a></li>
       <li><a href="grapes.html">Grapes</a></li>
       <li><a href="red-currants.html">Red Currants</a></li>
     </ul>
@@ -22,8 +22,9 @@
 </header>
 
   <main>
-    <h2>Berries, berries, oh my!</h2>
-    <p>In everyday English, “berry” is a term for any <strong>small edible fruit.</strong> These “berries” are usually <strong>juicy</strong>, <strong>round</strong>, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+    <h2>Blueberries</h2>
+    <img src="images/blueberries.jpg" alt="">
+    <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
   </main>
   <footer>© Berries.</footer>
 </header>
