--- a/grapes.html
+++ b/grapes.html
@@ -13,17 +13,18 @@
   <h1>Berries</h1>
   <nav>
     <ul class="nav">
-      <li><a class="current" href="index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="blueberries.html">Blueberries</a></li>
-      <li><a href="grapes.html">Grapes</a></li>
+      <li><a class="current" href="grapes.html">Grapes</a></li>
       <li><a href="red-currants.html">Red Currants</a></li>
     </ul>
   </nav>
 </header>
 
   <main>
-    <h2>Berries, berries, oh my!</h2>
-    <p>In everyday English, “berry” is a term for any <strong>small edible fruit.</strong> These “berries” are usually <strong>juicy</strong>, <strong>round</strong>, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+    <h2>Grapes</h2>
+    <img src="images/grapes.jpg" alt="">
+    <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
   </main>
   <footer>© Berries.</footer>
 </header>
