Add a class tag

--- a/blueberries.html
+++ b/blueberries.html
@@ -2,31 +2,35 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Berries</title>
+  <title>navigation-highlight-blueberries</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Sigmar+One|Georgia" rel="stylesheet">
+  <link rel="stylesheet" href="css/master.css">
+  <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 </head>
 <body>
-
-<header>
-  <h1>Berries</h1>
-  <nav>
-    <ul class="nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a class="current" href="blueberries.html">Blueberries</a></li>
-      <li><a href="grapes.html">Grapes</a></li>
-      <li><a href="red-currants.html">Red Currants</a></li>
-    </ul>
-  </nav>
-</header>
-
+  <header>
+    <h1>Berries</h1>
+    <nav>
+      <ul>
+        <li class="box-1"><a href="index.html">Home</a></li>
+        <li class="box-2"><a class="current" href="blueberries.html">Blueberries</a></li>
+        <li class="box-3"><a href="grapes.html">Grapes</a></li>
+        <li class="box-4"><a href="red-currants.html">Red Currants</a></li>
+      </ul>
+    </nav>
+  </header>
   <main>
-    <h2>Blueberries</h2>
-    <img src="images/blueberries.jpg" alt="">
-    <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
+    <h2 class="head">Blueberries</h2>
+    <figure>
+      <img class="img" src="images/blueberries.jpg" alt="">
+      <figcaption>
+        <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
+      </figcaption>
+    </figure>
   </main>
-  <footer>© Berries.</footer>
-</header>
+  <footer>
+    <small>© Berries.</small>
+  </footer>
 </body>
 </html>
