--- a/grapes.html
+++ b/grapes.html
@@ -2,37 +2,29 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>navigation-highlight-grapes</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>grapes.html</title>
   <link href="css/main.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/master.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
-
 </head>
 <body>
   <header>
     <h1>Berries</h1>
+
     <nav>
-      <ul>
-        <li class="box-1"><a href="index.html">Home</a></li>
-        <li class="box-2"><a href="blueberries.html">Blueberries</a></li>
-        <li class="box-3"><a class="current" href="grapes.html">Grapes</a></li>
-        <li class="box-4"><a href="red-currants.html">Red Currants</a></li>
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blueberries.html">Blueberries</a></li>
+        <li><a class="current" href="grapes.html">Grapes</a></li>
+        <li><a href="red-currants.html">Red Currants</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <h2 class="head">Grapes</h2>
-    <figure>
-      <img class="img" src="images/grapes.jpg" alt="">
-      <figcaption>
-        <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
-      </figcaption>
-    </figure>
+    <h2>Grapes</h2>
+    <img src="images/grapes.jpg" alt="">
+    <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
   </main>
-  <footer>
-    <small>© Berries.</small>
-  </footer>
-
+  <footer>© Berries.</footer>
 </body>
 </html>
