--- a/index.html
+++ b/index.html
@@ -2,31 +2,30 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>navigation-highlight</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>index.html</title>
   <link href="css/main.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/master.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 </head>
 <body>
   <header>
     <h1>Berries</h1>
+
     <nav>
-      <ul>
-        <li class="box-1"><a class="current" href="index.html">Home</a></li>
-        <li class="box-2"><a href="blueberries.html">Blueberries</a></li>
-        <li class="box-3"><a href="grapes.html">Grapes</a></li>
-        <li class="box-4"><a href="red-currants.html">Red Currants</a></li>
+      <ul class="nav">
+        <li><a class="current" href="index.html">Home</a></li>
+        <li><a href="blueberries.html">Blueberries</a></li>
+        <li><a href="grapes.html">Grapes</a></li>
+        <li><a href="red-currants.html">Red Currants</a></li>
       </ul>
     </nav>
   </header>
+
   <main>
     <h2>Berries, berries, oh my!</h2>
-    <p class="pp">In everyday English, “berry” is a term for any <strong>small edible fruit</strong>. These “berries” are usually <b>juicy</b>, <b>round</b>, <strong>brightly coloured</strong>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+    <p>In everyday English, “berry” is a term for any <b>small edible fruit</b>. These “berries” are usually <b>juicy</b>, <b>round</b>, <b>brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
   </main>
-  <footer>
-    <small>© Berries.</small>
-  </footer>
 
+  <footer><small><b>© Berries.</b></small></footer>
 </body>
 </html>
