--- a/red-currants.html
+++ b/red-currants.html
@@ -2,36 +2,30 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>navigation-highlight-red-currants</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>red-currants.html</title>
   <link href="css/main.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/master.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 </head>
 <body>
   <header>
     <h1>Berries</h1>
+
     <nav>
-      <ul>
-        <li class="box-1"><a href="index.html">Home</a></li>
-        <li class="box-2"><a href="blueberries.html">Blueberries</a></li>
-        <li class="box-3"><a href="grapes.html">Grapes</a></li>
-        <li class="box-4"><a class="current" href="red-currants.html">Red Currants</a></li>
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blueberries.html">Blueberries</a></li>
+        <li><a href="grapes.html">Grapes</a></li>
+        <li><a class="current" href="red-currants.html">Red Currants</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <h2 class="head">Red Currants</h2>
-    <figure>
-      <img class="img" src="images/red-currants.jpg" alt="">
-      <figcaption>
-        <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
-      </figcaption>
-    </figure>
+    <h2>Red currants</h2>
+    <img src="images/red-currants.jpg" alt="">
+    <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
   </main>
-  <footer>
-    <small>© Berries.</small>
-  </footer>
 
+  <footer>© Berries.</footer>
 </body>
 </html>
